traducidas todas las vistas -aclaraciones en login pendientes - boton de cambio de lenguaje pendiente - pwa retoques pendiente

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,8 @@
 #MainLayout
 #Navbar
-logout="Log Out"
+logout=Log Out
 #Side bar
-sidebar-list="Contact List"
+sidebar-list=Contact List
 sidebar-dashboard=Dashboard
 #ListView texts
 #ListView & ContactForm fields
@@ -17,3 +17,6 @@ company=Company
 save=Save
 delete=Delete
 cancel=Cancel
+
+#Dashboard
+contacts=contacts
