--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -1,8 +1,21 @@
+#Login
+login-title=Iniciar sessão
+login-username=Nome de usuário
+login-password=Senha
+login-submit=Enviar
+login-forgot-password=Esqueceu a senha?
+
+#Login-Error
+login-error-title=Nome de usuário e/ou senha incorretos.
+login-error-message=Verifique os dados informados e tente novamente.
+login-user-required=Insira o nome de usuário.
+login-password-required=Insira a senha.
+
 #MainLayout
 #Navbar
-logout="Sair"
+logout=Sair
 #Side bar
-sidebar-list="Lista de Contatos"
+sidebar-list=Lista de Contatos
 sidebar-dashboard=Painel de Controle
 #ListView texts
 #ListView & ContactForm fields
@@ -17,3 +30,6 @@ company=Empresa
 save=Salvar
 delete=Excluir
 cancel=Cancelar
+
+#Dashboard
+contacts=contatos
