localizacion para español, portugues e ingles finalizado

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,13 @@
+#Login
+login-description=*Hint: Usernames: admin/user - Password: password
+
 #MainLayout
 #Navbar
 logout=Log Out
 #Side bar
 sidebar-list=Contact List
 sidebar-dashboard=Dashboard
+
 #ListView texts
 #ListView & ContactForm fields
 filter=Filter by name...
