--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,9 +1,11 @@
 #Login 
 login-title=Iniciar Sesión
+login-description=*Pista: Usuarios: admin/user - Contraseña: password
 login-username=Nombre de usuario
 login-password=Contraseña
 login-submit=Enviar
 login-forgot-password=¿Olvidó la contraseña?
+
 
 #Login-Error
 login-error-title=Nombre de usuario y/o contraseña incorrecto/a.
