--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -1,5 +1,6 @@
 #Login
 login-title=Iniciar sessão
+login-description=*Dica: Usuários: admin/user - Senha: password
 login-username=Nome de usuário
 login-password=Senha
 login-submit=Enviar
