iniciada creacion de combobox de lenguajes -pendiente

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,12 @@
 login-description=*Hint: Usernames: admin/user - Password: password
 
 #MainLayout
+#LanguageSelector
+language-selector-name=Language Selector
+language-combobox-placeholder=Select a language...
+english=English
+portuguese=Portuguese
+spanish=Spanish
 #Navbar
 logout=Log Out
 #Side bar
