--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -14,6 +14,13 @@ login-user-required=Ingrese el nombre de usuario.
 login-password-required=Ingrese la contraseña.
 
 #MainLayout
+#LanguageSelector
+language-selector-name=Selector de idioma
+language-combobox-placeholder=Seleccione un idioma...
+english=Inglés
+portuguese=Portugués
+spanish=Español
+
 #Navbar
 logout=Cerrar sesión
 
