--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -13,6 +13,12 @@ login-user-required=Insira o nome de usuário.
 login-password-required=Insira a senha.
 
 #MainLayout
+#LanguageSelector
+language-selector-name=Seletor de idioma
+language-combobox-placeholder=Selecione um idioma...
+english=Inglês
+portuguese=Português
+spanish=Espanhol
 #Navbar
 logout=Sair
 #Side bar
