refactorizado para produccion

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,7 +3,7 @@ login-description=*Hint: Usernames: admin/user - Password: password
 
 #MainLayout
 #LanguageSelector
-language-selector-name=Language Selector
+language-selector-name=Language Selection
 language-combobox-placeholder=Select a language...
 english=English
 portuguese=Portuguese
