--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -15,7 +15,7 @@ login-password-required=Ingrese la contraseña.
 
 #MainLayout
 #LanguageSelector
-language-selector-name=Selector de idioma
+language-selector-name=Selección de idioma
 language-combobox-placeholder=Seleccione un idioma...
 english=Inglés
 portuguese=Portugués
