--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -14,7 +14,7 @@ login-password-required=Insira a senha.
 
 #MainLayout
 #LanguageSelector
-language-selector-name=Seletor de idioma
+language-selector-name=Seleção de idioma
 language-combobox-placeholder=Selecione um idioma...
 english=Inglês
 portuguese=Português
